# custom-tar

./: .gitlab-ci.yml  Archive.cpp  Archive.hpp  CMakeLists.txt  IArchive.hpp  IArchiveEntry.hpp  README.md  Tlv.cpp  Tlv.hpp  archive.mtar  compiler.h  main.cpp  test.mtar
.github/workflows/: ci.yml
FastLZ/: CMakeLists.txt  Makefile
test_logs/: file_1.txt  manifest.json
test_logs/dir_d1_0/: file_0.txt
test_logs/dir_d1_0/dir_d2_0/: file_1.txt  file_4.txt
test_logs/dir_d1_0/dir_d2_1/dir_d3_0/: file_0.txt  file_1.txt  file_3.txt
test_logs/dir_d1_0/dir_d2_1/dir_d3_1/: file_0.txt  file_2.txt
test_logs/dir_d1_0/dir_d2_1/dir_d3_2/: file_3.txt  file_4.txt
test_logs/dir_d1_1/dir_d2_0/: file_1.txt  file_2.txt
test_logs/dir_d1_1/dir_d2_0/dir_d3_0/: file_0.txt  file_1.txt  file_3.txt
test_logs/dir_d1_1/dir_d2_0/dir_d3_1/: file_2.txt  file_3.txt  file_4.txt  file_5.txt
test_logs/dir_d1_1/dir_d3_0/: file_0.txt
test_logs/dir_d1_1/dir_d3_1/: file_1.txt  file_2.txt
test_logs/dir_d1_1/dir_d3_2/: file_0.txt  file_1.txt
test_logs/dir_d1_2/: file_0.txt
test_logs/dir_d1_2/dir_d2_0/: file_4.txt
test_logs/dir_d1_2/dir_d2_0/dir_d3_0/: file_1.txt
test_logs/dir_d1_2/dir_d2_0/dir_d3_1/: file_1.txt  (+3 more)
test_logs/dir_d1_2/dir_d3_0/: file_1.txt
test_logs/dir_d1_2/dir_d3_1/: file_0.txt
test_logs/dir_d1_2/dir_d3_2/: file_0.txt
test_logs/dir_d2_0/: file_1.txt  file_2.txt  file_3.txt
test_logs/dir_d2_0/dir_d3_0/: file_0.txt
test_logs/dir_d2_0/dir_d3_1/: file_0.txt
test_logs/dir_d2_1/: file_0.txt  file_2.txt
test_logs/dir_d2_1/dir_d3_1/: file_0.txt
test_logs/dir_d2_1/dir_d3_2/: file_3.txt  file_4.txt
test_logs/dir_d3_0/: file_0.txt  file_1.txt
test_logs/dir_d3_1/: file_1.txt
test_logs/dir_d3_2/: file_0.txt  file_1.txt
tests/: run_tests.py  test_archive.py  test_performance.py
(+3 files in other folders)
